# avx2-matrix-vector-multiplication

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AlignmentAllocator.h  CMakeLists.txt  CMakeSettings.json  Jenkinsfile  LICENSE  README.md  __with-local-cc.sh  _build-env.sh  avx2-MxN-matrix-N-vector-multiplication.cpp  avx2-MxN-matrix-N-vector-multiplication.sln  avx2-MxN-matrix-N-vector-multiplication.vcxproj  avx2-MxN-matrix-N-vector-multiplication.vcxproj.filters  avx2-matrix-vector-multiplication.code-workspace  build-with-local-cc.sh  ci-reports-with-local-cc.sh  conanfile.txt  install-dependencies-with-local-conan.sh  n_m_matrix_avx2.cpp  n_m_matrix_avx2.sln  n_m_matrix_avx2.vcxproj  n_m_matrix_avx2.vcxproj.filters  run-with-local-cc.sh  sonar-project.properties  test-coverage-with-local-cc.sh  test-with-local-cc.sh
sources/: CMakeLists.txt
sources/avx2-model/: CMakeLists.txt
sources/avx2-model/include/: avx2-model.h
sources/avx2-model/src/: avx2-model.cpp
sources/avx2-variant/: CMakeLists.txt
sources/avx2-variant-client/: CMakeLists.txt
sources/avx2-variant-client/include/: avx2-variant-client.h
sources/avx2-variant-client/src/: avx2-variant-client.cpp
sources/avx2-variant-mt/: CMakeLists.txt
sources/avx2-variant-mt-client/: CMakeLists.txt
sources/avx2-variant-mt-client/src/: avx2-variant-mt-client.cpp
sources/avx2-variant-mt/include/: avx2-variant-mt.h
sources/avx2-variant-mt/src/: avx2-variant-mt.cpp
sources/avx2-variant/include/: avx2-variant.h
sources/avx2-variant/src/: avx2-variant.cpp
sources/scalar-variant/: CMakeLists.txt
sources/scalar-variant-client/: CMakeLists.txt
sources/scalar-variant-client/src/: scalar-variant-client.cpp
sources/scalar-variant/include/: scalar-variant.h
sources/scalar-variant/src/: scalar-variant.cpp
sources/sources-build-aggregate/: CMakeLists.txt
tests/: CMakeLists.txt
tests/avx2-model.catch-tests/: CMakeLists.txt
tests/avx2-model.catch-tests/include/: test_commons.h
tests/avx2-variant-mt.catch-tests/: CMakeLists.txt
tests/avx2-variant-mt.catch-tests/include/: test_commons.h
tests/avx2-variant-mt.catch-tests/src/: avx2-transformation-mt.cpp
tests/avx2-variant.catch-tests/: CMakeLists.txt
tests/avx2-variant.catch-tests/include/: test_commons.h
tests/avx2-variant.catch-tests/src/: avx2-transformation.cpp  creating-avx2-matrices.cpp  modifiable-avx2-matrices.cpp  modifiable-avx2-vectors.cpp  scalable-avx2-matrices.cpp  scalable-avx2-vectors.cpp
tests/avx2-variant.native-tests/: CMakeLists.txt
tests/avx2-variant.native-tests/include/: avx2_variant_tests.h
tests/avx2-variant.native-tests/src/: avx2_variant_test.cpp
tests/scalar-variant.catch-tests/: CMakeLists.txt
tests/scalar-variant.catch-tests/include/: test_commons.h
tests/scalar-variant.catch-tests/src/: creating-scalar-matrices.cpp  modifiable-scalar-matrices.cpp  scalable-scalar-matrices.cpp  scalar-transformation.cpp  test.cpp
